Change logos of Mrquicks to Charlie Boy. Some changes on CSS. Add Terms and Conditions on Nav bar menu.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,9 +31,9 @@
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
                 <div>
                     <a class="navbar-brand brand-logo" href="/account">
-                        <img src="../images/mrquicks/mrQuicksLogo.png" alt="logo" style="height: auto!important;" />
+                        <img src="../images/charlieBoy/CB-3.png" alt="logo" style="height: auto!important;" />
                     </a>
-                    <a class="navbar-brand brand-logo-mini" href="/account">
+                    <a class="navbar-brand brand-logo-mini ms-1" href="/account">
                         <img src="../images/favicon.png" alt="logo" />
                     </a>
                 </div>
