--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
         </div>
         <div>
             <a class="navbar-brand brand-logo" href="/account">
-                <img src="../../images/mrquicks/mrQuicksLogo.png" alt="logo" style="height: auto!important;" />
+                <img src="../../images/charlieBoy/CB-3.png" alt="logo" style="height: auto!important;" />
             </a>
             <a class="navbar-brand brand-logo-mini" href="/account">
                 <img src="../../images/favicon.png" alt="logo" />
@@ -161,6 +161,11 @@
                         <i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i>
                         <i class="dropdown-item-icon far fa-question-circle text-primary me-2"></i> FAQ
                     </a> -->
+                    <a class="dropdown-item" href="/termsandconditions" target="_blank">
+                        <!-- <i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> -->
+                        <i class="dropdown-item-icon far fa-copyright text-primary me-2"></i>
+                        <%= lingua.termsAndConditions%>
+                    </a>
                     <form action="/logout?_method=DELETE" method="POST">
                         <button type="submit" class="dropdown-item">
                             <!-- <i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i> -->
