--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -29,9 +29,9 @@
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
                     <div class="col-lg-4 mx-auto">
-                        <div class="auth-form-light text-center py-5 px-4 px-sm-5">
+                        <div class="auth-form-light text-center py-4 px-4 px-sm-5">
                             <div class="brand-logo">
-                                <img src="/images/mrquicks/mrQuicksLogo.png" alt="logo">
+                                <img src="/images/charlieBoy/CB-5.jpg" alt="logo">
                             </div>
                             <h4>
                                 <%= lingua.login%>
