Add camera id on Location model, views and forms.

--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -99,6 +99,13 @@
                                                                 <% } %>
                                                             </select>
                                                         </div>
+
+                                                        <div class="form-group">
+                                                            <label class="required" for="camera_id"><%= lingua.cameraID%></label>
+                                                            <input autocomplete="off" value="<%-location.camera_id%>"
+                                                                type="text" id="camera_id" name="camera_id"
+                                                                class="form-control form-control-lg" required />
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="row">
