--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -65,7 +65,10 @@
                                                                 <%- location.name%>
                                                             </td>
                                                         </tr>
-
+                                                        <tr>
+                                                            <td><%= lingua.cameraID%></td>
+                                                            <td><%- location.camera_id%></td>
+                                                        </tr>
                                                         <tr>
                                                             <td><%= lingua.active%></td>
                                                             <td>
