--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -86,6 +86,12 @@
                                                                 <% } %>
                                                             </select>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="required" for="camera_id"><%= lingua.cameraID%></label>
+                                                            <input autocomplete="off"
+                                                                type="text" id="camera_id" name="camera_id"
+                                                                class="form-control form-control-lg" required />
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="row">
