--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -46,7 +46,7 @@
             </li>
         </ul>
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item dropdown ms-0">
+            <li class="nav-item dropdown ms-0" title="Locations">
                 <select class="form-select nav-dropdown w-100" name="location" id="locationDropdown" onchange="changeLocation(this, true)">
                     <!-- <option value="">Select Location</option> -->
                     <% for(const location of user.locations) { %>
