--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -101,9 +101,9 @@
                                                         </div>
 
                                                         <div class="form-group">
-                                                            <label class="required" for="camera_id"><%= lingua.cameraID%></label>
-                                                            <input autocomplete="off" value="<%-location.camera_id%>"
-                                                                type="text" id="camera_id" name="camera_id"
+                                                            <label class="required" for="agentID"><%= lingua.agentID%></label>
+                                                            <input autocomplete="off" value="<%-location.agentID%>"
+                                                                type="text" id="agentID" name="agentID"
                                                                 class="form-control form-control-lg" required />
                                                         </div>
                                                     </div>
