--- a/views/location/index.ejs
+++ b/views/location/index.ejs
@@ -67,7 +67,7 @@
                                                     <thead>
                                                         <tr>
                                                             <th><%= lingua.name%></th>
-                                                            <th><%= lingua.cameraID%></th>
+                                                            <th><%= lingua.agentID%></th>
                                                             <th><%= lingua.active%></th>
                                                             <th><%= lingua.action%></th>
                                                         </tr>
@@ -82,7 +82,7 @@
                                                                 </a>
                                                             </td>
                                                             <td>
-                                                                <%- location.camera_id%>
+                                                                <%- location.agentID%>
                                                             </td>
                                                             <td>
                                                                 <% if(location.isActive) { %>
