--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -66,8 +66,8 @@
                                                             </td>
                                                         </tr>
                                                         <tr>
-                                                            <td><%= lingua.cameraID%></td>
-                                                            <td><%- location.camera_id%></td>
+                                                            <td><%= lingua.agentID%></td>
+                                                            <td><%- location.agentID%></td>
                                                         </tr>
                                                         <tr>
                                                             <td><%= lingua.active%></td>
