--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -87,9 +87,9 @@
                                                             </select>
                                                         </div>
                                                         <div class="form-group">
-                                                            <label class="required" for="camera_id"><%= lingua.cameraID%></label>
+                                                            <label class="required" for="agentID"><%= lingua.agentID%></label>
                                                             <input autocomplete="off"
-                                                                type="text" id="camera_id" name="camera_id"
+                                                                type="text" id="agentID" name="agentID"
                                                                 class="form-control form-control-lg" required />
                                                         </div>
                                                     </div>
