--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -215,7 +215,11 @@
             contentType: "application/json"
         }).done(function (result) {
             console.log('result: ' + result)
-            $('#locationDropdown').val(result);
+            if (result)
+                $('#locationDropdown').val(result);
+            else
+                window.location.href = '/';
+
         }).fail(function (err) {
             console.log(err);
         })
@@ -281,10 +285,6 @@
                 })
             }).done(function (result) {
                 readFlag = true;
-                // if (newStatus == "true")
-                // $(`#a-${notificationId}`).remove();
-                // else
-                // $(`#${notificationId}`).addClass('text-primary');
 
             }).fail(function (err) {
                 console.log(err);
